--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,10 +4,8 @@
         <title>{% block title %}{% endblock %} | Armwrestling Zurich</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Armwrestling Zurich Ranking. Official armwrestling rankings for the Armwrestling Zurich club in Zurich, Switzerland. The scores are based on the ELO rating system. Explore the latest official armwrestling rankings for the Armwrestling Zurich club. Our rankings are calculated using the ELO rating system.">
-        <meta name="keywords" content="armwrestling, zurich, ELO rating, armwrestling club, rankings, armwrestling matches, armwrestling switzerland">
-        <meta property="og:title" content="Armwrestling Zurich Ranking">
-        <meta property="og:description" content="Armwrestling rankings for the Armwrestling Zurich club in Zurich, Switzerland.">
+        <meta name="description" content="Armwrestling Zurich Ranking. Official armwrestling rankings for the Armwrestling Zurich club in Zurich, Switzerland. The scores are calculated using the ELO rating system. Explore the latest official armwrestling rankings for the Armwrestling Zurich club.">
+        <meta name="keywords" content="armwrestling zurich, armwrestling, zurich, club, armwrestling club, rankings, ELO rating, armwrestling matches, armwrestling switzerland">
         <meta property="og:image" content="/static/thumbnail.jpg">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
